
bp 2015/4/14
bugfix
  bug: bep_201504-3
  Exempt deductions are not included in the gross wage. "Exempt" means that these amounts are not included
  in the calculation of deductions. (Deduction) exempted wage types will still be paid to the employee.
  Corrected hr.pl, print program arapprn.pl and the Latex form

bp 2015/4/14
bugfix
  bug: bep_201504-02
  Deferred wage is not printed on the payslip.
  Corrected print program (arapprn.pl), Latex form and prog. hr.pl

bp 2015/4/11
bugfix
  bug: bep_201504-01
  1 wage type, income tax (deduction), fixed income tax amounts based on the yealy salary, several tax brackets.
  Wage is deferred.
  Income tax is calculated correctly. If, however, the "Update" button is pressed afterwards the income tax calculation
  comes to a different(lower) result.
  Tax (deduction) calculation was incorrect (hr.pl, update_payroll function)

bp 2015/2/24
bugfix
  bug: bep_201502-03 - fixed 2015/2/24
  'Reconciliation' transaction abort with error message: "Bad name after A' at bin/mozilla/rc.pl line 173".
  Programming error: missing quote in rc.pl (line 146)

bp 2015/2/24
bugfix
  bug: bep_201502-03 - fixed 2015/2/24
   transaction abort when wage pay is posted.
   Programming error in HR.pm (line 1256)

bp 2015/2/15
bugfix
bp 2015/2/14
  bug: bep_201502-02 - fixed 2015/2/15
  payslip incorrect, multiple issues:
  cannot print several wage types, cannot print several rates, deductions not correctly printed, currency and
  bank data not printed, no distinction between already paid and not yet paid.
  Retrieved missing data and amended the latex form.

bp 2015/2/14
bugfix
  bug: bep_201502-01 - fixed 2015/2/14
  cannot print invoices. Error message: Can't connect to data source '' because I can't work out what driver to use
  Programming error in IS.pm (line 238)- database connection failed

bp 2015/1/9
bugfix
  bug: bep_201501-10