@@ -15,7 +15,7 @@
   password => 'adpexzg3FUZAk',
   outputformat => 'ps',
   printer => 'BRN2270',
-  sessionkey => '221412042011010800030615171613232609210725191005021824',
+  sessionkey => '150908161825232103040605190102241112260714100020131722',
   stylesheet => 'sql-ledger.css',
   timeout => '10800',
   vclimit => '1000',
